<resources>
    <string name="app_name">FamilyShoppingList</string>
    <string name="enter_note">Enter note:</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="save_button">SAVE</string>
    <string name="undo_button">UNDO</string>
    <string name="add_new_note_button">Add new note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_input_note">invalid note</string>
</resources>